Huy - sell item page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   google_sign_in: ^5.0.5
   firebase_messaging: ^10.0.4
   firebase_analytics: ^8.2.0
-
+  timeline_tile: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
