--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   provider: ^5.0.0
   http: ^0.13.3
   shared_preferences: ^2.0.6
+  localstorage: ^4.0.0+1
   firebase_core: ^1.4.0
   firebase_auth: ^3.0.1
   google_sign_in: ^5.0.5
@@ -38,6 +39,7 @@ dependencies:
   firebase_analytics: ^8.2.0
   timeline_tile: ^2.0.0
   url_launcher: ^6.0.9
+  flutter_dotenv: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -59,6 +61,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/icons/
+    - .env
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
 
